--- a/game/src/client/index.html
+++ b/game/src/client/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Meta Properties -->
     <meta charset="UTF-8">
-    <title>Plata o Plomo</title>
+    <title>Nouns Royale</title>
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!-- CSS -->
@@ -54,7 +54,7 @@
             </div>
         </nav>
         <div id="startMenu" class="relative w-[30rem] mx-auto mt-24 w-88 p-5 rounded bg-transparent box-border">
-            <p class="text-center text-5xl font-bold">Plata o Plomo?</p>
+            <p class="text-center text-5xl font-bold">Nouns Royale</p>
             <!-- <input type="text" tabindex="0" autofocus placeholder="Enter your name here" id="playerNameInput"
                 maxlength="25"
                 class="w-full text-center p-2 border border-gray-300 rounded mb-2 focus:outline-none focus:border-gray-400 focus:shadow-md" />
@@ -66,7 +66,8 @@
                 <!-- <w3m-network-button></w3m-network-button> -->
             </div>
             <br />
-
+            <div class="">Pick your character: </div>
+            <br />
             <div class="flex gap-4">
                 <div id="noun1" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
                     <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun_1.png"
@@ -86,8 +87,27 @@
                 </div>
             </div>
             <br />
+            <div class="flex gap-4">
+                <div id="noun5" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
+                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_9.png"
+                        class="rounded-lg" data-name="noun5" />
+                </div>
+                <div id="noun6" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
+                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_10.png"
+                        class="rounded-lg" data-name="noun6" />
+                </div>
+                <div id="noun7" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
+                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_6.png"
+                        class="rounded-lg" data-name="noun7" />
+                </div>
+                <div id="noun8" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
+                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_7.png"
+                        class="rounded-lg" data-name="noun8" />
+                </div>
+            </div>
+            <br />
             <div id="connect-button"></div>
-            
+
             <br />
             <div id="settings" class="transition-[max-height] duration-1000 overflow-hidden max-h-0">
                 <h3 class="pb-0 mb-0">Settings</h3>
