--- a/game/src/client/index.html
+++ b/game/src/client/index.html
@@ -1,161 +1,262 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <!-- Meta Properties -->
+        <meta charset="UTF-8" />
+        <title>Nouns Royale</title>
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
+        />
+        <!-- CSS -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- <link rel="stylesheet" href="css/main.css" /> -->
+        <!-- Audio -->
+        <audio id="split_cell" src="audio/split.mp3"></audio>
+        <audio id="spawn_cell" src="audio/spawn.mp3"></audio>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <style>
+            body {
+                font-family: "Londrina Solid", cursive;
+                background-color: #a89e9c;
+            }
 
-<head>
-    <!-- Meta Properties -->
-    <meta charset="UTF-8">
-    <title>Nouns Royale</title>
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <!-- CSS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap"
-        rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/main.css" /> -->
-    <!-- Audio -->
-    <audio id="split_cell" src="audio/split.mp3"></audio>
-    <audio id="spawn_cell" src="audio/spawn.mp3"></audio>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            font-family: 'Londrina Solid', cursive;
-            background-color: rgb(225, 215, 213);
-        }
+            #points {
+                -webkit-transform-style: preserve-3d;
+                -moz-transform-style: preserve-3d;
+                transform-style: preserve-3d;
+                -webkit-backface-visibility: hidden;
+                -moz-backface-visibility: hidden;
+                backface-visibility: hidden;
+            }
+        </style>
+    </head>
 
-        #points {
-            -webkit-transform-style: preserve-3d;
-            -moz-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-            -webkit-backface-visibility: hidden;
-            -moz-backface-visibility: hidden;
-            backface-visibility: hidden;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="gameAreaWrapper" class="absolute top-0 left-0 opacity-0">
-        <div id="endGame"
-            class="absolute p-2 bg-black bg-opacity-40 text-white text-lg font-bold text-center top-2 left-2">
-            <span class="title text-2xl cursor-pointer">End Game</span>
-        </div>
-        <!-- top center -->
-        <div id="points"
-            class="absolute p-2 bg-black bg-opacity-40 text-white text-lg font-bold text-center top-2 left-1/2 transform -translate-x-1/2">
-        </div>
-        <div id="status"
-            class="absolute p-2 bg-black bg-opacity-40 text-white text-lg font-bold text-center top-2 right-2">
-            <span class="title text-2xl">Leaderboard</span>
-        </div>
-        <div id="chatbox"
-            class="chatbox absolute w-72 h-80 bg-black bg-opacity-70 bottom-1 left-1 rounded pointer-events-none hidden">
-            <ul id="chatList" class="chat-list p-1 m-0 list-none box-border h-[285px] overflow-hidden"></ul>
-            <input id="chatInput" type="text"
-                class="chat-input pointer-events-auto box-border w-full p-2 bg-transparent border-none border-t border-gray-300 outline-none"
-                placeholder="Chat here..." maxlength="35" />
-        </div>
-        <div id="mobile">
-            <!-- <input type="image" id="split" class="split absolute bottom-2 left-2 w-24 h-24 p-1 border-none"
+    <body>
+        <div id="gameAreaWrapper" class="absolute top-0 left-0 opacity-0">
+            <div
+                id="endGame"
+                class="absolute p-2 bg-black bg-opacity-40 text-white text-lg font-bold text-center top-2 left-2"
+            >
+                <span class="title text-2xl cursor-pointer">End Game</span>
+            </div>
+            <!-- top center -->
+            <div
+                id="points"
+                class="absolute p-2 bg-black bg-opacity-40 text-white text-lg font-bold text-center top-2 left-1/2 transform -translate-x-1/2"
+            ></div>
+            <div
+                id="status"
+                class="absolute p-2 bg-black bg-opacity-40 text-white text-lg font-bold text-center top-2 right-2"
+            >
+                <span class="title text-2xl">Leaderboard</span>
+            </div>
+            <div
+                id="chatbox"
+                class="chatbox absolute w-72 h-80 bg-black bg-opacity-70 bottom-1 left-1 rounded pointer-events-none hidden"
+            >
+                <ul
+                    id="chatList"
+                    class="chat-list p-1 m-0 list-none box-border h-[285px] overflow-hidden"
+                ></ul>
+                <input
+                    id="chatInput"
+                    type="text"
+                    class="chat-input pointer-events-auto box-border w-full p-2 bg-transparent border-none border-t border-gray-300 outline-none"
+                    placeholder="Chat here..."
+                    maxlength="35"
+                />
+            </div>
+            <div id="mobile">
+                <!-- <input type="image" id="split" class="split absolute bottom-2 left-2 w-24 h-24 p-1 border-none"
                 src="img/split.png" alt="splitBtn">
             <input type="image" id="feed" class="feed absolute bottom-2 right-2 w-24 h-24 p-1 border-none"
                 src="img/feed.png" alt="feedBtn"> -->
-        </div>
-        <canvas tabindex="1" id="cvs" class="w-full h-full bg-black bg-opacity-40"></canvas>
-    </div>
-    <div id="startMenuWrapper" class="z-10 p-12">
-        <nav>
-            <div class="flex">
-                <img src="https://europe1.discourse-cdn.com/standard21/uploads/nouns/original/2X/2/2949af822ff6527c2205d1556651248fd3c908ab.svg"
-                    width="100px" />
             </div>
-        </nav>
-        <div id="startMenu" class="relative w-[30rem] mx-auto mt-24 w-88 p-5 rounded bg-transparent box-border">
-            <p class="text-center text-5xl font-bold">Nouns Royale</p>
-            <!-- <input type="text" tabindex="0" autofocus placeholder="Enter your name here" id="playerNameInput"
+            <canvas
+                tabindex="1"
+                id="cvs"
+                class="w-full h-full bg-black bg-opacity-40"
+            ></canvas>
+        </div>
+        <div id="startMenuWrapper" class="z-10 p-12">
+            <nav>
+                <div class="flex">
+                    <img
+                        src="https://europe1.discourse-cdn.com/standard21/uploads/nouns/original/2X/2/2949af822ff6527c2205d1556651248fd3c908ab.svg"
+                        width="100px"
+                    />
+                </div>
+            </nav>
+            <div
+                id="startMenu"
+                class="relative w-[30rem] mx-auto mt-24 w-88 p-5 rounded bg-transparent box-border"
+            >
+                <p class="text-center text-5xl font-bold">Nouns Royale</p>
+                <!-- <input type="text" tabindex="0" autofocus placeholder="Enter your name here" id="playerNameInput"
                 maxlength="25"
                 class="w-full text-center p-2 border border-gray-300 rounded mb-2 focus:outline-none focus:border-gray-400 focus:shadow-md" />
             <b class="input-error text-red-500 opacity-0 text-xs">Nick must be alphanumeric characters only!</b> -->
-            <br />
-
-            <div id="root" class="flex items-center justify-center">
-                <w3m-button></w3m-button>
-                <!-- <w3m-network-button></w3m-network-button> -->
-            </div>
-            <br />
-            <div class="">Pick your character: </div>
-            <br />
-            <div class="flex gap-4">
-                <div id="noun1" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun_1.png"
-                        class="rounded-lg" data-name="noun1" />
-                </div>
-                <div id="noun2" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun_2.png"
-                        class="rounded-lg" data-name="noun2" />
-                </div>
-                <div id="noun3" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun.png"
-                        class="rounded-lg" data-name="noun3" />
-                </div>
-                <div id="noun4" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun_3.png"
-                        class="rounded-lg" data-name="noun4" />
-                </div>
-            </div>
-            <br />
-            <div class="flex gap-4">
-                <div id="noun5" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_9.png"
-                        class="rounded-lg" data-name="noun5" />
-                </div>
-                <div id="noun6" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_10.png"
-                        class="rounded-lg" data-name="noun6" />
-                </div>
-                <div id="noun7" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_6.png"
-                        class="rounded-lg" data-name="noun7" />
-                </div>
-                <div id="noun8" class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500">
-                    <img src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_7.png"
-                        class="rounded-lg" data-name="noun8" />
-                </div>
-            </div>
-            <br />
-            <div id="connect-button"></div>
-
-            <br />
-            <div id="settings" class="transition-[max-height] duration-1000 overflow-hidden max-h-0">
-                <h3 class="pb-0 mb-0">Settings</h3>
-                <ul class="m-2 p-2 mt-0">
-                    <label><input id="visBord" type="checkbox"> Show border</label>
-                    <label><input id="showMass" type="checkbox"> Show mass</label>
-                    <br />
-                    <label><input id="continuity" type="checkbox"> Continue moving when mouse is off-screen</label>
-                    <br />
-                    <label><input id="roundFood" type="checkbox" checked> Rounded food</label>
-                    <label><input id="darkMode" type="checkbox"> Toggle Dark Mode</label>
-                </ul>
-            </div>
-            <div id="instructions">
-                <h3>Gameplay</h3>
                 <br />
-                <ul>
-                    <li>Move your mouse on the screen to move your character.</li>
-                    <li>Eat food and other players in order to grow your character (food respawns every time a player
-                        eats it).</li>
-                    <li>A player's mass is the number of food particles eaten.</li>
-                    <li>Objective: Try to get fat and eat other players.</li>
-                </ul>
+
+                <div id="root" class="flex items-center justify-center">
+                    <w3m-button></w3m-button>
+                    <!-- <w3m-network-button></w3m-network-button> -->
+                </div>
+                <br />
+                <div class="">Pick your character:</div>
+                <br />
+                <div class="flex gap-4">
+                    <div
+                        id="noun1"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun_1.png"
+                            class="rounded-lg"
+                            data-name="noun1"
+                        />
+                    </div>
+                    <div
+                        id="noun2"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun_2.png"
+                            class="rounded-lg"
+                            data-name="noun2"
+                        />
+                    </div>
+                    <div
+                        id="noun3"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun.png"
+                            class="rounded-lg"
+                            data-name="noun3"
+                        />
+                    </div>
+                    <div
+                        id="noun4"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720774464/noun_3.png"
+                            class="rounded-lg"
+                            data-name="noun4"
+                        />
+                    </div>
+                </div>
+                <br />
+                <div class="flex gap-4">
+                    <div
+                        id="noun5"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_9.png"
+                            class="rounded-lg"
+                            data-name="noun5"
+                        />
+                    </div>
+                    <div
+                        id="noun6"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_10.png"
+                            class="rounded-lg"
+                            data-name="noun6"
+                        />
+                    </div>
+                    <div
+                        id="noun7"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_6.png"
+                            class="rounded-lg"
+                            data-name="noun7"
+                        />
+                    </div>
+                    <div
+                        id="noun8"
+                        class="w-1/2 cursor-pointer rounded-lg border hover:border-blue-500"
+                    >
+                        <img
+                            src="https://res.cloudinary.com/brunoeleodoro/image/upload/v1720861295/noun_7.png"
+                            class="rounded-lg"
+                            data-name="noun8"
+                        />
+                    </div>
+                </div>
+                <br />
+                <div id="connect-button"></div>
+
+                <br />
+                <div
+                    id="settings"
+                    class="transition-[max-height] duration-1000 overflow-hidden max-h-0"
+                >
+                    <h3 class="pb-0 mb-0">Settings</h3>
+                    <ul class="m-2 p-2 mt-0">
+                        <label
+                            ><input id="visBord" type="checkbox" /> Show
+                            border</label
+                        >
+                        <label
+                            ><input id="showMass" type="checkbox" /> Show
+                            mass</label
+                        >
+                        <br />
+                        <label
+                            ><input id="continuity" type="checkbox" /> Continue
+                            moving when mouse is off-screen</label
+                        >
+                        <br />
+                        <label
+                            ><input id="roundFood" type="checkbox" checked />
+                            Rounded food</label
+                        >
+                        <label
+                            ><input id="darkMode" type="checkbox" /> Toggle Dark
+                            Mode</label
+                        >
+                    </ul>
+                </div>
+                <div id="instructions">
+                    <h3>Gameplay</h3>
+                    <br />
+                    <ul>
+                        <li>
+                            Move your mouse on the screen to move your
+                            character.
+                        </li>
+                        <li>
+                            Eat food and other players in order to grow your
+                            character (food respawns every time a player eats
+                            it).
+                        </li>
+                        <li>
+                            A player's mass is the number of food particles
+                            eaten.
+                        </li>
+                        <li>
+                            Objective: Try to get fat and eat other players.
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- JS -->
-    <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script type="module" src="js/app.js"></script>
-
-</body>
-
+        <!-- JS -->
+        <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+        <script type="module" src="js/app.js"></script>
+    </body>
 </html>
